# DesktopDynamicWallpaperForQT

./: CMakeLists.txt  LICENSE  README.md
include/: QAudioPlay.h  QMySlider.h  QPlayListThread.h  QVideoPlayer.h  QVideoPlayer.ui  QVideoThread.h  QVideoWidget.h  QXFFmpeg.h
src/: QAudioPlay.cpp  QMySlider.cpp  QPlayListThread.cpp  QVideoPlayer.cpp  QVideoThread.cpp  QVideoWidget.cpp  QXFFmpeg.cpp  main.cpp
